# Comfyui-Anima-Tools-HUB

./: .gitignore  README.md  anima_lora_api.py  nodes.py  pyproject.toml
js/: anima_apply_tags.js  anima_artist_selector.js  anima_artist_sources.js  anima_background_selector.js  anima_batch_runner.js  anima_character_selector.js  anima_character_sources.js  anima_clothing_selector.js  anima_detail_selectors.js  anima_hub.js  anima_image_utils.js  anima_lora_selector.js  anima_pose_selector.js  anima_promo_links.js  anima_prompt_builder.js  anima_prompt_composer.js  anima_prompt_plus.js  anima_random_scope.js  anima_selector_random.js  anima_target_resolver.js  background_data.js  clothing_data.js  composition_data.js  expression_data.js  i18n.js  lighting_data.js  pose_data.js
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
wildcards/anima_tools/: composition.txt  expression.txt  lighting.txt
