[project]
name = "comfyui-anima-tools"
version = "1.0.5"
description = "专为 ComfyUI 设计的高性能、多维度二次元画师与角色视觉选择套件 (Artist & Character Visual Selector)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "nnegret" }
]
keywords = ["comfyui", "anime", "artist-style", "character-tags", "prompt-generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/nregret/Comfyui-Anima-Tools"

[tool.comfy]
PublisherId = "nnegret"
DisplayName = "Anima-Tools"
Icon = ""
Banner = ""
