[project]
name = "comfyui-anima-tools"
version = "3.2.2"
description = "专为 ComfyUI 设计的高性能、多维度二次元画师、角色、服装、随机提示词整合与 Anima LoRA 搜索下载加载套件"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "nnegret" }
]
keywords = ["comfyui", "anime", "artist-style", "character-tags", "lora-loader", "prompt-generator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/nregret/Comfyui-Anima-Tools"

[tool.comfy]
PublisherId = "nnegret"
DisplayName = "Anima-Tools"
Icon = ""
Banner = ""
